--- a/booking.html
+++ b/booking.html
@@ -14,13 +14,13 @@
             <label for="menu">Menu</label>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="branches.html">Branches</a></li>
-                <li><a href="Adven.html">Adventure</a></li>
-                <li><a href="res.html">Resturants</a></li>
-                <li><a href="wedd.html">Wedding</a></li>
-                <li><a href="party.html">Party</a>
-                <li><a href="booking.html">Booking</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="branches.html">BRANCHES</a></li>
+                <li><a href="Adven.html">ADVENTURE</a></li>
+                <li><a href="res.html">RESTAURANTS</a></li>
+                <li><a href="wedd.html">WEDDING</a></li>
+                <li><a href="party.html">PARTY</a>
+                <li><a href="booking.html">BOOKING</a></li>
             </ul>
         </nav>
     </header>
@@ -102,27 +102,10 @@
     
 </body>
 <footer>
-    <div class="footer">
-        <div class="footer_1">
-            <h2>CONTACT US</h2>
-            <p>Hotel Tour,
-            Colombo 07,
-            Sri Lanka.</p>
-            <p>Phone: +94 11 234 5678</p>
-            <p>Fax: +94 11 234 5678</p>
-            <p>Email:CB012343@students.apiit.lk</p>
-        </div>
-        <div class="footer_2">
-            <h2>Discover More</h2>
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="branches.html">BRANCHES</a></li>
-                <li><a href="Adven.html">ADVENTURE</a></li>
-                <li><a href="res.html">RESTAURENTS</a></li>
-                <li><a href="wedd.html">WEDDING</a></li>
-                <li><a href="party.html">PARTY</a>
-                <li><a href="booking.html">BOOKING</a></li>
-            </ul>
-        </div>
-</footer>
+    <h2>HOTEL TOUR</h2>
+    <p>Contact Us: +94 11 2345678</p>
+    <p>Fax : +94 11 2345678</p>
+    <p>Mail : info@hoteltour.com</p>
+    <h6>&copy;2023 Hotel Tour PLC All Rights Reserved</h6>
+  </footer>
 </html>
